@@ -92,6 +92,9 @@ move_right	Alt+Right
 inc_zoom	E
 dec_zoom	W
 reset_zoom	Shift+E
+auto_zoom	Shift+W
+auto_zoom_169	Shift+A
+auto_zoom_235	Shift+S
 exit_fullscreen	Esc
 next_osd	O
 dec_contrast	1
